# jankensqlhub

./: .clinerules  .env.postgres.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml  op.md  release.md  run-local-tests.sh
.claude/skills/using-jankensqlhub/: SKILL.md
.github/workflows/: release.yml  verify.yml
archived_tasks/: 01_refactor_parameter_support.md  03_progress_postgresql_env_setup.md  06_postgres_type_to_json_conversion.notes.md  07_progress_decouple_param_analysis_from_db.md  08_progress_postgresql.md  10_progress_no_null.md  12_progress_fix_test_compilation_failures.md  13_progress_remove_native_io_json_error_wrappers.md  14_progress_enumif_fuzzy_matching.md  15_progress_returns_name_mapping.md  16_progress_comma_list_feature.md  17_progress_dynamic_returns.md  18_progress_replace_unwrap_with_expect.md  19_progress_range_constraint_list_comma_list.md  20_progress_transaction_api.md  conditional_enum.md  progress_error_handling_flexibility.md  progress_fix_test_compilation_failures.md  progress_flatten_structure.md  progress_no_wrap_up_native_db_error.md  progress_split_runner.md
src/: connection.rs  lib.rs  parameter_constraints.rs  parameters.rs  query.rs  result.rs  runner.rs  runner_postgresql.rs  runner_sqlite.rs  str_utils.rs
src/query/: mod.rs  query_def.rs  query_definitions.rs
test_json/: crud.json  def.json  request1.json  request2.json  resource_queries.json
tests/: comma_list_tests.rs  comprehensive_tests.rs  comprehensive_tests_injection.rs  comprehensive_tests_parameters.rs  comprehensive_tests_sqlite.rs  comprehensive_tests_str_utils.rs  comprehensive_tests_transactions.rs  dynamic_returns_tests.rs  enumif_tests.rs  enumif_tests_basic.rs  enumif_tests_fuzzy.rs  enumif_tests_malformed.rs  enumif_tests_multiple_conditions.rs  enumif_tests_no_match.rs  enumif_tests_non_primitive.rs  enumif_tests_primitive.rs  error_handling.rs  error_handling_parameter_validation_blob.rs  error_handling_parameter_validation_enum.rs  error_handling_parameter_validation_list.rs  error_handling_parameter_validation_pattern.rs  error_handling_parameter_validation_range.rs  error_handling_parameter_validation_type.rs  error_handling_query_definition.rs  error_handling_runtime.rs  error_handling_utilities.rs  integration_tests.rs  mvp_tests.rs  postgresql_env_setup.rs  postgresql_integration.rs  postgresql_integration_errors.rs  postgresql_integration_json.rs  postgresql_integration_transactions.rs  postgresql_integration_types.rs  resource_queries_tests.rs
