[package]
name = "jankensqlhub"
version = "1.0.1"
edition = "2024"
authors = ["Martin Zheng <jszhengyq@gmail.com>"]
description = "A high-performance, modular Rust library for parameterizable SQL query management with support for SQLite and PostgreSQL"
readme = "README.md"
documentation = "https://docs.rs/jankensqlhub"
repository = "https://github.com/pandazy/jankensqlhub"
homepage = "https://github.com/pandazy/jankensqlhub"
license = "MIT"
keywords = ["sqlite", "postgresql", "sql", "query-builder", "database"]
categories = ["database", "database-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37", optional = true }
thiserror = "2.0"
regex = "1.12"
once_cell = "1.19"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }
anyhow = "1.0"

[features]
default = ["all"]
all = ["sqlite", "postgresql"]
sqlite = ["rusqlite"]
postgresql = ["tokio-postgres"]

[dev-dependencies]
chrono = "0.4"
